Fix padding of content to make it more readable, implement "last update using git log"

--- a/webroot/css/coffee.css
+++ b/webroot/css/coffee.css
@@ -88,7 +88,7 @@ div.twocols div.twocols-right {
 }
 
 div.twocols div.twocols-right div.content {
-    padding: 0px 20px 10px 10px;
+    padding: 0px 20px 10px 20px;
 }
 
 h2 {
